[package]
name = "libsync"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
crc32fast = "1.2.1"
serde_json = "1.0.66"
thiserror = "1.0.26"
tracing = "0.1.26"
tokio = { version = "1.10.1", features = ["net", "sync"] }
async-trait = "0.1.51"

[dev-dependencies]
tokio = { version = "1.10.1", features = ["net", "sync", "time", "macros", "rt-multi-thread"] }
xdg = "2.2.0"
clap = "2.33.3"
tracing-subscriber = "0.2.20"
console = "0.14.1"
