[package]
name = "libsync"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
crc32fast = "1.2.1"
serde_json = "1.0.66"
thiserror = "1.0.26"
