[package]
name = "libsync-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsync = { path = "../core" }
dashmap = "4.0.2"
tokio = { version = "1.10.0", features = ["macros", "rt-multi-thread", "net", "sync", "time", "io-util"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
thiserror = "1.0.26"
console = "0.14.1"
